--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.datasource.url=jdbc:postgresql://localhost/cats
 spring.datasource.username=postgres
 spring.datasource.password=1
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
