--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.datasource.username=postgres
 spring.datasource.password=1
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 
-spring.mustache.expose-request-attributes=true
+spring.freemarker.expose-request-attributes=true
+spring.freemarker.suffix=.ftl
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
