add files is done!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.suffix=.ftl
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+upload.path=/Users/macbookair/Desktop/MyIxtlan/Ixtlan/uploads
